# Cloud-Odyssey

./: Grafana Visualization.docx  Prometheus metrics  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
client/: .gitkeep  Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: App.js  index.js  store.js
client/src/features/: authSlice.js  orderSlice.js
client/src/pages/: LogIn.js  MasterService.js  Register.js  WorkerService.js  index.js
client/src/services/: LocalStorageService.js  userAuthApi.js
docs/: README.md
docs/api/: api-documentation.md
docs/architecture/: HLD.md
docs/requirements/: SRS.md
server/node-manager/: .gitkeep
server/ssh-manager/: .gitkeep
server/task-scheduler/: .gitkeep
services/auth-service/: README.md  go.mod  go.sum  main.go
services/auth-service/Controllers/: userController.go
services/auth-service/Models/: userModel.go
services/auth-service/Routes/: userRouter.go
services/auth-service/database/: databaseConnection.go
services/auth-service/helpers/: Helper.go
services/auth-service/middleware/: authMiddleware.go
services/master-service/: .gitignore  Dockerfile  README.md  pyproject.toml
services/master-service/src/: main.py
services/master-service/src/handlers/: compiler.py  runner.py  scheduler.py
services/master-service/src/utils/: file_ops.py
services/monitoring-service/: README.md
services/monitoring-service/src/: setup.ssh
services/task-queue-service/: README.md
services/worker-service/: .env  Dockerfile  README.md  go.mod
(+8 files in other folders)
