[tool.poetry]
name = "master-service"
version = "0.1.0"
description = ""
authors = ["Abhijna Raghavendra <a_raghavendra@ma.iitr.ac.in>"]
readme = "README.md"
packages = [{include = "master_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
